group 'org.xblackcat.euler'
version '0.1-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'net.sf.trove4j', name: 'core', version: '3.1.0'

    testCompile group: 'junit', name: 'junit', version: '4.12'
}
